# hy454

./: .gitignore  CMakeLists.txt  PDF_FULL_AUDIT.md  PDF_FULL_COMPLIANCE_ANALYSIS.md  README.md  analyze_sprites.py  find_enemies.py  find_sprites.py  measure_enemies.py
App/include/: Enemy.hpp  GameObjects.hpp  ResourceManager.hpp  SonicPlayer.hpp  SpriteSheetConfig.hpp  TileMapLoader.hpp
App/src/: SonicPlayer.cpp
Engine/include/: DestructionManager.hpp  Engine.hpp  GridLayer.hpp
Engine/src/: DestructionManager.cpp  SystemClock.cpp  TileLayer.cpp
assets/: README.txt  collision_map.csv
sonic_engine/: .gitignore  ANIMATION_GUIDE.md  CMakeLists.txt  Makefile  PDF_COMPLIANCE_AUDIT.md  PDF_COMPLIANCE_CHECKLIST.md
sonic_engine/App/include/: Enemy.hpp  GameObjects.hpp  HUD.hpp  Parallax.hpp  ResourceManager.hpp  Ring.hpp  SonicPlayer.hpp  SoundManager.hpp  SpriteSheetConfig.hpp  TileMapLoader.hpp  TunnelSystem.hpp  WhirlCircle.hpp
sonic_engine/App/src/: SonicPlayer.cpp  TunnelSystem.cpp  WhirlCircle.cpp  main.cpp
sonic_engine/Engine/include/: Animation.hpp  AnimationFilm.hpp  Animator.hpp  Bitmap.hpp  DestructionManager.hpp  Engine.hpp  Game.hpp  GridLayer.hpp  Input.hpp  Sprite.hpp  SystemClock.hpp  TileConstants.hpp  TileLayer.hpp  Types.hpp
sonic_engine/Engine/src/: AnimationFilm.cpp  Animator.cpp  Bitmap.cpp  DestructionManager.cpp  Game.cpp  GridLayer.cpp  Input.cpp  Sprite.cpp  SystemClock.cpp  TileLayer.cpp
sonic_engine/assets/: Collision Map.tmx  Collision_Map.tmj  Collision_Map.tmx  Flowers.tsx  Sonic_Map.tsx  Sonic_Terrain.csv  Sonic_Terrain.tmx  collision_map.csv  collision_tiles.tsx
